[gd_scene load_steps=3 format=3 uid="uid://337ax8mji8ac"]

[ext_resource type="Theme" uid="uid://bbvfb43bck665" path="res://themes/theme.tres" id="1_3ybo5"]
[ext_resource type="Script" uid="uid://hwaa2pqluwyk" path="res://shader_parameter_image_UI.gd" id="1_ky82d"]

[node name="ShaderParameterImageUI" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("1_3ybo5")
text = "Heightmap 1"
script = ExtResource("1_ky82d")

[node name="SelectHeightmapFileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = "Open a File"
initial_position = 2
size = Vector2i(2018, 1416)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2

[node name="FailedToLoadImageAcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
oversampling_override = 1.0
title = ""
initial_position = 2
size = Vector2i(482, 211)
dialog_text = "Failed to load image"

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="file_selected" from="SelectHeightmapFileDialog" to="." method="_on_file_dialog_file_selected"]
